apps/traefik/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --api.insecure
            - --providers.kubernetescrd
            - --entryPoints.web.Address=:80
            - --entryPoints.websecure.Address=:443
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
