apps/traefik/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  annotations:
    metallb.universe.tf/address-pool: lab-lb-iprange
    metallb.universe.tf/allow-shared-ip: traefik-dashboard
spec:
  type: LoadBalancer
  ports:
    - name: dashboard
      port: 8080
      targetPort: dashboard
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web
spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: web
      port: 80
  selector:
    app: traefik
