apps/traefik/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
annotations:
  kubernetes.io/ingress.class: traefik
metadata:
  name: traefik-dashboard
spec:
  rules:
  - host: traefik.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              name: dashboard
